<resources>
    <string name="app_name">eWalle</string>
    <string name="image_description">Geometric design</string>
    <string name="clock">06:20 PM</string>
    <string name="temperature">34°C</string>
    <string name="date">Nov.10.2020 | Wednesday</string>
    <string name="main_name">eWalle</string>
    <string name="offer">Open An Account For Digital E-Wallet Solutions.Instant Payouts. \n \n
       \nJoin For Free.</string>
    <string name="sign_in_button">Sign in</string>
    <string name="create_account_button">Create an account</string>
    <string name="account_overview">Account Overview</string>
    <string name="send_money">Send Money</string>
    <string name="services">Services</string>
    <string name="current_balance">Current balance</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="version">Version 2.0.1</string>
</resources>