<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home_button"
            android:title="@string/home"
            android:checked="true" />
        <item android:id="@+id/profile_button"
            android:title="@string/profile"
            android:checked="false"/>
        <item android:id="@+id/accounts_button"
            android:title="@string/accounts"
            android:checked="false"/>
        <item android:id="@+id/transactions_button"
            android:title="@string/transactions"
            android:checked="false"/>
        <item android:id="@+id/stats_button"
            android:title="@string/stats"
            android:checked="false"/>
        <item android:id="@+id/settings_button"
            android:title="@string/settings"
            android:checked="false"/>
        <item android:id="@+id/help_button"
            android:title="@string/help"
            android:checked="false"/>
    </group>
</menu>